# zlvm

./: .gitignore  CMakeLists.txt  LICENSE  PVS-Studio.cmake  README.md  pvs-headers.py  test.asm  test.s
asm/: CMakeLists.txt  main.c
asm/include/: Assembler.h  Directive.h  LabelTable.h  Lexer.h  LineList.h  LinkedList.h  Parser.h  Statement.h  Token.h  asm.h  zlasm.h
asm/src/: Assembler.c  Directive.c  Error.h  LabelTable.c  Lexer.c  LineList.c  Memory.h  Parser.c  Statement.c  Token.c  asm.c  zlasm.c
emulator/: CMakeLists.txt  main.c
emulator/include/: ALU.h  CPSR.h  Condition.h  Instruction.h  Opcode.h  State.h  Types.h  Value.h  VirtualMachine.h
emulator/src/: ALU.c  ALU.h  CPSR.h  Error.h  Instruction.c  Memory.h  Opcode.c  Value.h  VirtualMachine.c  VirtualMachine.h  VirtualMachineInternal.c  VirtualMachineInternal.h
include/: CPSR.h  Registers.h  zlvm.h
include/asm/: Directive.h  LabelTable.h  Lexer.h  Line.h  LineList.h  LinkedList.h  Macros.h  Statement.h  Token.h  zlasm.h
src/: ALU.c  ALU.h  CPSR.h  Common.h  Condition.h  Instruction.h  State.h  Value.h  VirtualMachine.c  VirtualMachine.h  main.c
src/asm/: Lexer.c  Lexer.h  Token.c  Token.h  asm.c  asm.h
src/common/: Condition.h  Error.h  Opcode.h  Registers.h  State.h  Types.h  Value.h
src/emulator/: ALU.c  ALU.h  CPSR.h  VirtualMachine.c  VirtualMachine.h
